# whisper-v3-diarization

./: .gitignore  DIARIZATION_IMPLEMENTATION.md  LICENSE  README.md  SETUP_GUIDE.md  test_implementation.py
audio-transcription-cli/: .env.example  convert_mp3_to_wav.py  debug_audio.py  pyproject.toml  requirements.txt
audio-transcription-cli/src/audio_transcription/: __main__.py  cli.py
audio-transcription-cli/src/audio_transcription/config/: settings.py
audio-transcription-cli/src/audio_transcription/core/: audio_processor.py  diarization.py  transcription.py
audio-transcription-cli/src/audio_transcription/utils/: file_handler.py  logger.py
